--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,12 +14,10 @@
     </form>
 
     <h1> To Do List </h1>   
-    <%  let todoList = []; %>
-    <% todoList.push(task); %>
-    <% console.log(todoList) %>
+    <% console.log(list) %>
     <ul>
-    <% for(let i = 0; i < todoList.length; i++) { %>
-       <li> <%= todoList[i] %> </li>
+    <% for(let i = 0; i < list.length; i++) { %>
+       <li> <%= list[i] %> </li>
     <% } %>
     </ul>
 
