--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,12 +38,14 @@
     <h1> To Do List </h1> 
 
     <% console.log(list) %>
-    <% if(list !== ' ') { %>
+    <% if(list) { %>
         <ul>
             <% for(let i = 0; i < list.length; i++) { %>
                 <li>
-                    <%= list[i] %>
-                    <button onclick="dlt(this, <%= i %>)"> x </button>
+                    <form method="post" action="/dlt/:<%=i%>">
+                            <%= list[i] %>
+                            <input type="submit" name="dlt" value="x" />
+                    </form>
                 </li>
             <% } %>
         </ul>
